<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="0dp"
            android:paddingTop="0dp" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/cover" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="20dip" >

            <TextView
                android:id="@+id/errorMsg"
                style="@style/ErrorText"
                android:layout_width="fill_parent"
                android:layout_height="56dp" />
            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/email"
                android:textColor="#372c24"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/email"
                style="@style/TextMedium"
                android:background="@drawable/gradient_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#372c24"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/password"
                style="@style/TextMedium"
                android:background="@drawable/gradient_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Login button -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dip" >

                <Button
                    android:id="@+id/login"
                    style="@style/Button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/register"
                    style="@style/Button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/register" />
                <!-- Link to Registration Screen -->
            </LinearLayout>

            <TextView
                android:id="@+id/forgetPassbtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="30dip"
                android:gravity="center"
                android:text="@string/forgetPass"
                android:textColor="#0b84aa"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>