<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <!-- change pass Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/errorMsg"
                style="@style/ErrorText"
                android:layout_width="fill_parent"
                android:layout_height="56dp" />

            <!-- Password Label -->

            <TextView
                style="@style/TextLarg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/oldPassword" />

            <!-- To hide the input keyboard by default -->

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/oldPassword"
                style="@style/TextMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/gradient_box"
                android:inputType="textPassword"
                android:maxLength="25"
                android:singleLine="true" />

            <TextView
                style="@style/TextLarg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/newPassword" />

            <EditText
                android:id="@+id/newPassword"
                style="@style/TextMedium"
                android:background="@drawable/gradient_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="textPassword"
                android:maxLength="25"
                android:singleLine="true" />

            <TextView
                style="@style/TextLarg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/newPasswordConf" />

            <EditText
                android:id="@+id/newPasswordConf"
                style="@style/TextMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="textPassword"
                android:background="@drawable/gradient_box"
                android:maxLength="25"
                android:singleLine="true" />

            <!-- Change Password button -->

            <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dip"
                style="@style/Button"
                android:text="@string/ChangePassword" />
        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>